--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"pinia": "^2.1.7",
 		"splitpanes": "^3.1.5",
 		"vue": "^3.3.4",
+		"vue-feather": "^2.0.0",
 		"vue-router": "^4.2.5"
 	},
 	"devDependencies": {
